force-app/main/default/objects/TPO_Pool_x_Deal__c/TPO_Pool_x_Deal__c.object-meta.xml
<CustomObject>
    <label>TPO Pool to Deal</label>
    <nameField>
        <label>TPO Pool to Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TPO Pool to Deals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>