force-app/main/default/objects/TPO_Pool_x_Deal__c/fields/Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bid_Amount__c</fullName>
    <label>Bid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>