force-app/main/default/objects/TPO_Pool_x_Deal__c/fields/Bid_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bid_Percent__c</fullName>
    <description>% of the Loan Amount</description>
    <inlineHelpText>% of the Loan Amount</inlineHelpText>
    <label>Bid %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>