force-app/main/default/objects/TPO_Pool_x_Deal__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <inlineHelpText>Reason that CoreVest is not bidding/purchasing this Loan</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low LTV</fullName>
            </value>
            <value>
                <fullName>Bad Borrower</fullName>
            </value>
            <value>
                <fullName>Payment History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>