force-app/main/default/objects/TPO_Pool_x_Deal__c/fields/TPO_Pool__c.field-meta.xml
<CustomField>
    <fullName>TPO_Pool__c</fullName>
    <label>TPO Pool</label>
    <referenceTo>TPO_Pool__c</referenceTo>
    <relationshipLabel>TPO Pool to Deals</relationshipLabel>
    <relationshipName>Lender_Deal_to_Deals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>