force-app/main/default/objects/TPO_Pool_x_Deal__c/validationRules/Rejection_Reason_Required_No_Bid.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Required_No_Bid</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;No Bid&quot;) &amp;&amp;  ISBLANK(TEXT(Rejection_Reason__c))</errorConditionFormula>
    <errorMessage>Rejection Reason is required when status is changed to No Bid.</errorMessage>
</ValidationRule>